--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title>home</title>
     <link rel="stylesheet" href="/CSS/index.css"> 
 </head>
 <body>
